--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "routes": [
-    { "src": "/about", "dest": "/about.html" },
+    { "src": "/about", "dest": "/index.html" },
     { "src": "/api/*", "dest": "/api/index.js" }
   ]
 }
