--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,8 @@
 {
   "routes": [
     { "src": "/about", "dest": "/index.html" },
-    { "src": "/about", "dest": "/index.html" },
-    { "src": "/signin", "dest": "/index.html" }
+    { "src": "/signin", "dest": "/index.html" },
+    { "src": "/blog", "dest": "/index.html" },
+    { "src": "/api/*", "dest": "/api/index.js" }
   ]
 }
